laborations/lab4/testsuite/good/016.hs
dec n = n - 1 ;
main = print ((\ f -> (\ x -> f x) 19) dec) ;
