laborations/lab4/testsuite/bad/unknown-x.hs
main = print ((\x -> x) x);
